--- a/railroad_diagram.html
+++ b/railroad_diagram.html
@@ -11,10 +11,10 @@ Becky list&table Railroad Diagram
 Becky's List & Table Railroad Diagram
 </h2>
 
-<img src="/Users/Becky/Desktop/SP19/CSC265/railroad\ diagram/listelement.jpg" alt="This is a railroad diagram of 'list' element in html">
+<img src="CSC265-becky.song/listelement.jpg" alt="This is a railroad diagram of 'list' element in html">
 </img>
 
-<img src="/Users/Becky/Desktop/SP19/CSC265/railroad\ diagram/tableelement.jpg" alt="This is a railroad diagram of 'table' element in html">
+<img src="CSC265-becky.song/tableelement.jpg" alt="This is a railroad diagram of 'table' element in html">
 </img>
 
 </body>
