--- a/railroad_diagram.html
+++ b/railroad_diagram.html
@@ -11,10 +11,10 @@ Becky list&table Railroad Diagram
 Becky's List & Table Railroad Diagram
 </h2>
 
-<img src="https://github.com/beckysx/CSC265-becky.song/blob/master/listelement.jpg" alt="This is a railroad diagram of 'list' element in html">
+<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html">
 </img>
 
-<img src="https://github.com/beckysx/CSC265-becky.song/blob/master/tableelement.jpg" alt="This is a railroad diagram of 'table' element in html">
+<img src="tableelement.jpg" alt="This is a railroad diagram of 'table' element in html">
 </img>
 
 </body>
