--- a/railroad_diagram.html
+++ b/railroad_diagram.html
@@ -11,7 +11,7 @@ Becky list&table Railroad Diagram
 Becky's List & Table Railroad Diagram
 </h2>
 
-<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html">
+<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html" width="851" height="427">
 </img>
 
 <img src="tableelement.jpg" alt="This is a railroad diagram of 'table' element in html">
