--- a/railroad_diagram.html
+++ b/railroad_diagram.html
@@ -11,10 +11,10 @@ Becky list&table Railroad Diagram
 Becky's List & Table Railroad Diagram
 </h2>
 
-<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html" width="851" height="427">
+<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html" width="750" height="375">
 </img>
 
-<img src="tableelement.jpg" alt="This is a railroad diagram of 'table' element in html">
+<img src="tableelement.jpg" alt="This is a railroad diagram of 'table' element in html" width="750" height="375">
 </img>
 
 </body>
