--- a/railroad_diagram.html
+++ b/railroad_diagram.html
@@ -7,14 +7,22 @@ Becky list&table Railroad Diagram
 </head>
 
 <body>
-<h2>
+<h3>
 Becky's List & Table Railroad Diagram
-</h2>
+</h3>
 
-<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html" width="750" height="375">
+  <h4>
+    List Element
+  </h4>
+  
+<img src="listelement.jpg" alt="This is a railroad diagram of 'list' element in html" width="800" height="400">
 </img>
+  
+    <h4>
+    Table Element
+  </h4>
 
-<img src="tableelement.jpg" alt="This is a railroad diagram of 'table' element in html" width="750" height="375">
+<img src="tableelement.jpg" alt="This is a railroad diagram of 'table' element in html" width="800" height="400">
 </img>
 
 </body>
